--- a/views/frontend/src/App.css
+++ b/views/frontend/src/App.css
@@ -25,6 +25,7 @@ form {
   gap: 15px;
   width: 100%;
   max-width: 400px;
+  justify-content: center;
 }
 
 input {
@@ -33,6 +34,7 @@ input {
   border: 1px solid #444;
   background-color: #2a2a2a;
   color: white;
+  width: 350px;
 }
 
 nav {
